# Duck

./: CMakeLists.txt  CMakePresets.json  LICENSE  Logo.ai  README.md
Duck.Cosmo/: CMakeLists.txt
Duck.Cosmo/Celestial/: Celestial.h  Planet.cpp  Planet.h  Star.cpp  Star.h  Unit.cpp  Unit.h
Duck.Cosmo/Generation/: IGenerator.h
Duck.Cosmo/Math/: ISolver.h
Duck.Engine/: CMakeLists.txt  Engine.h  pch.h
Duck.Engine/Asset/Shader/: DefaultPBR.glsl
Duck.Engine/Graphics/: AmbientLight.h  Camera.cpp  Camera.h  CameraOrthographic.cpp  CameraOrthographic.h  CameraPerspective.cpp  CameraPerspective.h  GlobalLight.h  Lighting.cpp  Lighting.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  model_temp.cpp  model_temp.h
Duck.Engine/Math/: Math.h  Matrix.h  Matrix4.h  Quaternion.h  Random.h  Transform.h  Trigonometry.h  Vector.h  Vector2.h  Vector3.h  Vector4.h
Duck.Engine/Renderer/: CameraOrthographic.h  Light.cpp  Light.h  LightDirectional.cpp  LightDirectional.h  LightPoint.cpp  LightPoint.h  LightSpot.cpp  LightSpot.h  Mesh.cpp  Mesh.h  Model.h  Renderer.cpp  Renderer.h  Shader.cpp  Texture.cpp  Texture.h
Duck.Engine/Resource/: AssetModel.h  AssetShader.cpp  AssetShader.h  AssetTexture.cpp  AssetTexture.h  DataModel.cpp  DataShader.cpp  DataShader.h  DataTexture.cpp  Resource.cpp  Resource.h
Duck.Engine/Resources/: AssetModel.cpp  AssetModel.h  AssetShader.cpp  AssetShader.h  AssetTexture.cpp  AssetTexture.h  Resources.cpp  Resources.h
Duck.Engine/Scene/: Component.h  Entity.h  Scene.h
Duck.Engine/System/: Clock.cpp  Clock.h  Input.cpp  Input.h  Logger.h  Resources.cpp  Resources.h  Window.cpp  Window.h
Duck.Game/: CMakeLists.txt  Game.cpp  load_assets.cmake
Duck.Game/Asset/: StandardPBR.glsl
Duck.Game/Assets/: Default.shader  Suzanne.glb  Weapon.glb  Weapon.shader  cube.glb  model.glb  plane.glb  plane.gltf  untitled.glb
Duck.Game/Script/: BoxComponent.h  FlyCamera.h
Duck.Game/Scripts/: BoxComponent.h  FlyCamera.h  KinematicWeaponAnimation.h  Weapon.h
